<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Filter It</string>
    <string name="name">Shenghan Gao</string>
    <string name="action_settings">Settings</string>
    <string name="signal_amplitude">Signal Amplitude</string>
    <string name="frequency">Frequency</string>
    <string name="smoothing_factor">Smoothing Factor</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>

    <color name="pink">#FF6666</color>
    <color name="lightblue">#66CCFF</color>
    <color name="yellow">#FFFF99</color>
    <color name="gold">#CD7F32</color>
    <color name="orangered">#FF2400</color>
    <color name="green">#00FF7F</color>

</resources>
